; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-address.c_address_hash_func.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-address.c_address_hash_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.siphash = type { i32 }

@_fallthrough_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.siphash*)* @address_hash_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @address_hash_func(%struct.TYPE_5__* %0, %struct.siphash* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca %struct.siphash*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store %struct.siphash* %1, %struct.siphash** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = call i32 @assert(%struct.TYPE_5__* %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load %struct.siphash*, %struct.siphash** %4, align 8
  %11 = call i32 @siphash24_compress(i32* %9, i32 4, %struct.siphash* %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  switch i32 %14, label %34 [
    i32 129, label %15
    i32 128, label %25
  ]

15:                                               ; preds = %2
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load %struct.siphash*, %struct.siphash** %4, align 8
  %19 = call i32 @siphash24_compress(i32* %17, i32 4, %struct.siphash* %18)
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = call i32 @address_prefix(%struct.TYPE_5__* %20)
  store i32 %21, i32* %5, align 4
  %22 = load %struct.siphash*, %struct.siphash** %4, align 8
  %23 = call i32 @siphash24_compress(i32* %5, i32 4, %struct.siphash* %22)
  %24 = load i32, i32* @_fallthrough_, align 4
  br label %25

25:                                               ; preds = %2, %15
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 2
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @FAMILY_ADDRESS_SIZE(i32 %30)
  %32 = load %struct.siphash*, %struct.siphash** %4, align 8
  %33 = call i32 @siphash24_compress(i32* %27, i32 %31, %struct.siphash* %32)
  br label %35

34:                                               ; preds = %2
  br label %35

35:                                               ; preds = %34, %25
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i32 @siphash24_compress(i32*, i32, %struct.siphash*) #1

declare dso_local i32 @address_prefix(%struct.TYPE_5__*) #1

declare dso_local i32 @FAMILY_ADDRESS_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
